--- a/GPM/Base.lproj/Main.storyboard
+++ b/GPM/Base.lproj/Main.storyboard
@@ -816,9 +816,7 @@
                                         <collectionView selectable="YES" id="Fwp-7t-Pg1">
                                             <rect key="frame" x="0.0" y="0.0" width="448" height="298"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" scrollDirection="horizontal" id="8H6-ds-OXH">
-                                                <size key="itemSize" width="230" height="60"/>
-                                            </collectionViewFlowLayout>
+                                            <collectionViewLayout key="collectionViewLayout" id="C2C-jQ-Pfi" customClass="KanbanCollectionViewLayout" customModule="GPM" customModuleProvider="target"/>
                                             <color key="primaryBackgroundColor" name="quaternaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <connections>
                                                 <outlet property="dataSource" destination="Lgg-aU-Ak6" id="3Ny-Ny-jbG"/>
@@ -845,6 +843,9 @@
                             <constraint firstItem="bBt-YG-2B1" firstAttribute="leading" secondItem="bBo-mh-cHW" secondAttribute="leading" id="vSP-zH-auh"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Fwp-7t-Pg1" id="qvJ-3i-6nt"/>
+                    </connections>
                 </viewController>
                 <customObject id="t3y-xF-q5z" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
